syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package tdlapi;

option go_package = "tdlapi.v1;tdlapi";

service TodoService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty);
  rpc MarkTaskDone (MarkTaskDoneRequest) returns (google.protobuf.Empty);
  rpc ListTasks (google.protobuf.Empty) returns (ListTasksResponse);
}

message CreateTaskRequest {
  string title = 1 [(validate.rules).string = {max_len: 31}];
  string description = 2 [(validate.rules).string = {max_len: 255}];
}

message CreateTaskResponse {
  int32 id = 1;
}

message DeleteTaskRequest {
  int32 id = 1 [(validate.rules).int32 = {gt: 0}];
}

message MarkTaskDoneRequest {
  int32 id = 1 [(validate.rules).int32 = {gt: 0}];
}

message ListTasksResponse {
  repeated Task tasks = 1;

  message Task {
    int32 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
    google.protobuf.Timestamp created_at = 5;
  }
}